--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <h1>Mood Movie Matcher</h1>
-    <p class="description">Discover the perfect movie to match your mood! Our Mood Movie Matcher uses advanced AI to analyze your emotions based on your input and recommends a movie that perfectly suits how you're feeling. Whether you're happy, sad, in love, or just in need of a good laugh, we've got you covered.</p>
+    <p class="description">Discover the perfect movie to match your mood! Our Mood Movie Matcher uses a BiLSTM machine learning model trained on 500.000 tweets that are labeled by emotions to analyze your emotions based on your input and recommends a movie that perfectly suits how you're feeling. Whether you're happy, sad, in love, or just in need of a good laugh, we've got you covered.</p>
     <form id="mood-form">
         <h2>How was your day?</h2>
         <textarea id="prompt-input" placeholder="Enter your statement here..." maxlength="280"></textarea>
